themes/editorial/css/main.css
/* ... */
      #menu ul a.opener:before, #menu ul span.opener:before {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: FontAwesome;
        font-style: normal;
        font-weight: normal;
        text-transform: none !important; }
      #menu ul a.opener:before, #menu ul span.opener:before {
        -moz-transition: color 0.2s ease-in-out, -moz-transform 0.2s ease-in-out;
        -webkit-transition: color 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
        -ms-transition: color 0.2s ease-in-out, -ms-transform 0.2s ease-in-out;
        transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
        color: #555;
        content: '\f078';
        position: absolute;
        right: 0; }
      #menu ul a.opener:hover:before, #menu ul span.opener:hover:before {
        color: #e65a51; }
      #menu ul a.opener.active + ul, #menu ul span.opener.active + ul {
        display: block; }
      #menu ul a.opener.active:before, #menu ul span.opener.active:before {
        -moz-transform: rotate(-180deg);
        -webkit-transform: rotate(-180deg);
        -ms-transform: rotate(-180deg);
        transform: rotate(-180deg); }

#menu > ul > li {
  margin: 0.5em 0 0 0;
  padding: 0.5em 0 0 0; }
  #menu > ul > li > ul {
    color: #555;
    display: none;
    margin: 0.5em 0 1.5em 0;
    padding-left: 1em; }
    #menu > ul > li > ul a, #menu > ul > li > ul span {
      font-size: 0.8em; }
    #menu > ul > li > ul > li {
      margin: 0.125em 0 0 0;
      padding: 0.125em 0 0 0; }
  #menu > ul > li:first-child {
    border-top: 0;
    margin-top: 0;
    padding-top: 0; }

/*
    Place custom styles here.
*/
ul.tabs {
  display: table-cell;
  padding: 0; }

ul.tabs li {
  cursor: pointer;
  display: block;
  padding: 0 1.5rem;
  line-height: 3rem;
  float: left;
  transition: all 0.18s;
  background-color: #EEE;
  font-weight: bold; }
  ul.tabs li:hover {
    color: #e65a51; }

ul.tabs li.current {
  box-shadow: inset 0 -5px 0 #e65a51;
  color: #e65a51; }

.tab-content {
  display: none; }

.tab-content.current {
  display: inherit; }

/* plan */
table.plan tr {
  border: none; }

table.plan td {
  padding: 0.25em 0.75em; }

.plan--lichyDen {
  background-color: #EEE !important; }

.plan--sudyDen {
  background-color: inherit !important; }

.event--program {
  font-weight: bold; }

/****************
***** HOME ******
****************/
/* home - news */
.newsPictures {
  margin: 1em 0 0 0; }

.newsIMG {
  padding-bottom: 30px; }

.newsText {
  text-align: justify; }

/* home - soon */
#soon {
  padding: 0 2.5rem;
  background-color: #DDD; }
  #soon section {
    padding: 2.5rem;
    margin: 2.5rem;
    position: relative;
    left: 1rem;
    border: 1px dashed black; }
    #soon section.event {
      border: 1px solid black;
      background-color: white; }
    @media screen and (max-width: 1680px) {
      #soon section {
        padding: 1.5rem;
        margin: 1.5rem; } }

.soon--date {
  padding-top: 2.5rem; }

#soon section > article > ul {
  margin: 0; }

#soon a, #soon a:hover {
  text-decoration: none;
  color: #202020 !important; }

.soon--dot {
  height: 16px;
  width: 16px;
  background-color: #DDD;
  border-radius: 50%;
  display: inline-block;
  top: 3px;
  position: relative;
  border: solid; }

.soon--dot-now {
  background-color: #202020; }

.soon--day {
  float: right;
  top: 3px;
  position: relative; }

#soon--timeline {
  border: 2px #202020 solid;
  width: 0;
  height: calc(100% - 40px);
  float: left;
  left: 46px;
  margin-top: 56px;
  position: absolute; }

/****************
**** Program ****
****************/
#program tr {
  border: none; }

#filter_program {
  border: #202020 dashed 1px;
  margin-bottom: 2em; }

#filter_program label.pure-radio {
  margin: 2px; }

#filter_program fieldset {
  margin: 2.2em 1.1em; }

tr.program--now {
  border: solid #202020 !important;
  border-width: 0.5em 0em !important; }
  tr.program--now td {
    padding: 0; }

/* common */
.click-row {
  cursor: pointer; }
  .click-row:hover {
    background-color: #e65a51; }

#nav-links {
  position: relative;
  width: calc(100% - 40em);
  float: right;
  white-space: nowrap; }
  #nav-links > ul {
    float: right;
    list-style: none;
    margin: 0;
    padding: 0;
    z-index: 5; }
  #nav-links > ul > li {
    background: none;
    float: left;
    position: relative;
    padding: 0; }
    #nav-links > ul > li.hide {
      display: none; }
    #nav-links > ul > li:hover {
      color: #e65a51; }
      #nav-links > ul > li:hover ul {
        display: block; }
  #nav-links a {
    color: #DDD;
    text-decoration: none;
    font-family: Overpass;
    border-bottom: none;
    font-size: 1rem;
    padding: 0 1rem;
    display: inline-block; }
    #nav-links a:hover {
      color: #e65a51; }
  #nav-links ul ul {
    background: #2B2B2B;
    display: none;
    list-style: none;
    padding: 0;
    position: fixed;
    right: 0;
    top: 3rem; }
    #nav-links ul ul li {
      padding: 0; }
    #nav-links ul ul a {
      display: block;
      padding: 0 1rem; }

#links-more-btn {
  background-color: #2B2B2B !important;
  cursor: pointer; }
  #links-more-btn i {
    color: #DDD;
    padding: 1rem;
    font-size: 1rem;
    position: relative;
    top: -2px; }

#links-more-ul {
  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.2); }

#program .backgroundAccent {
  background-color: #e65a51; }

#program td.view {
  padding: 0;
  text-align: center; }
  #program td.view a {
    border-bottom: none;
    padding: 0.75em 0.75em;
    color: #222 !important; }
  #program td.view:hover {
    background-color: #e65a51; }

#program td.edit {
  padding: 0; }
  #program td.edit a {
    border-bottom: none;
    display: block;
    padding: 0.75em 0.75em;
    color: #222 !important; }

@media screen and (max-width: 1280px) {
  #sidebar, #nav-links {
    opacity: 0; } }

ul.tabs li.group-icon {
  display: none; }
/* ... */

